samples/_failures_safe/1761270854_18233f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04ac36f4.c: In function ‘main’:
./samples/SAFE/__tmp_04ac36f4.c:155:22: error: missing terminating ' character
  155 |         input[len] = '\
      |                      ^~
./samples/SAFE/__tmp_04ac36f4.c:155:9: error: expected expression at end of input
  155 |         input[len] = '\
      |         ^~~~~
./samples/SAFE/__tmp_04ac36f4.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04ac36f4.c:155:9: error: expected declaration or statement at end of input
